<resources>
    <string name="app_name">Annotations</string>
    <string name="empty_annotations_message">No notes so far</string>
    <string name="hint_name_of_folder">Folder Name</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="question_delete_note">Do you want to delete this Note?</string>
    <string name="question_delete_folder">Do you want to delete this Folder?</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="save">Save</string>
    <string name="message_input_password_not_empty">Password field can not be empty</string>
    <string name="hint_title_of_note">Title of note</string>
    <string name="hint_title_of_folder">Title of folder</string>
    <string name="new_note">New Note</string>
    <string name="hint_fill">My Note</string>
    <string name="items_preview_list">List View</string>
    <string name="items_preview_grid">Grid View</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="empty_text" />
    <string name="new_folder">New Folder</string>
    <string name="rename_folder">Rename Folder</string>
    <string name="password">Password</string>
    <string name="notes">Notes</string>
    <string name="folders">Folders</string>
    <string name="rename">Rename</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="question_delete_folder_with_notes">This action will erase all annotations inside the folder. Do you wish to continue ?</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="folder_blocked_successfully">Folder blocked successfully</string>
    <string name="folder_is_already_locked">This folder is already locked</string>
    <string name="folder_successfully_unlocked">Folder successfully unlocked</string>
    <string name="ads_banner_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_id">ca-app-pub-7769225974793786~7468493962</string>
    <string name="ads_banner_id">ca-app-pub-7769225974793786/8582975523</string>
    <string name="yes">Yes</string>
    <string name="not">No</string>
    <string name="question_save_changes">Do you want to save the changes?</string>
    <string name="message_max_letter">Maximum possible</string>
</resources>
