<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_title_of_note"
                android:lines="1"
                android:maxLength="25" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <CheckBox
        android:layout_marginTop="10dp"
        android:id="@+id/check_password"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="bloqueio" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_password"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="12" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_password"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="?attr/buttonBarNegativeButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/cancel"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btnConfirm"
            style="?attr/buttonBarPositiveButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/confirm"
            android:textColor="@android:color/black" />

    </LinearLayout>

</RelativeLayout>