<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:scrollbars="none"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/emptyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/empty_annotations_message" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/viewFolders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="8dp"
                    android:text="@string/folders"
                    android:textAllCaps="true"
                    android:textColor="#777777"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewFolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:clipToPadding="false"
                    android:layoutAnimation="@anim/layout_animation_from_right"
                    android:paddingBottom="8dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/viewNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="8dp"
                    android:text="@string/notes"
                    android:textAllCaps="true"
                    android:textColor="#777777"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:clipToPadding="false"
                    android:layoutAnimation="@anim/layout_animation_from_bottom"
                    android:paddingBottom="65dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/view_layer_fab_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAFFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="end"
        android:orientation="vertical">

     <!--   <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end|bottom"
            android:gravity="bottom"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_button_action_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/fab_default_margin"
                android:scaleType="centerInside"
                android:src="@drawable/ic_file_white"
                app:backgroundTint="@color/green_color"
                app:tint="@color/white" />-->

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_button_action_folder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/fab_default_margin"
                android:scaleType="centerInside"
                android:src="@drawable/ic_create_new_folder"
                app:backgroundTint="@color/green_color"
                app:tint="@color/white" />

           <!-- <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_button_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/fab_default_margin"
                android:src="@drawable/ic_add_white"
                app:backgroundTint="@color/colorAccent"
                app:tint="@color/white" />

        </FrameLayout>-->

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            ads:adSize="BANNER"
            ads:adUnitId="@string/ads_banner_id_test" />

    </LinearLayout>

</FrameLayout>