<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="78dp">

            <LinearLayout
                android:id="@+id/viewFolders"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="8dp"
                    android:text="@string/folders"
                    android:textColor="?textSecondaryColor"
                    android:textSize="12sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewFolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:background="@color/white"
                    android:clipToPadding="false"
                    android:layoutAnimation="@anim/layout_animation_from_right"
                    android:overScrollMode="never" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/viewNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="8dp"
                    android:text="@string/notes"
                    android:textColor="?textSecondaryColor"
                    android:textSize="12sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:background="@color/white"
                    android:clipToPadding="false"
                    android:layoutAnimation="@anim/layout_animation_from_bottom"
                    android:overScrollMode="never" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/emptyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/empty_annotations_message"
        android:textColor="?textPrimaryColor" />

    <RelativeLayout
        android:id="@+id/view_layer_fab_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAFFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end|bottom"
        android:gravity="bottom"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_button_action_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/fab_default_margin"
            android:scaleType="centerInside"
            android:src="@drawable/ic_file_white"
            app:backgroundTint="?accent"
            app:tint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_button_action_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/fab_default_margin"
            android:scaleType="centerInside"
            android:src="@drawable/ic_create_new_folder"
            app:backgroundTint="?accent"
            app:tint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_button_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/fab_default_margin"
            android:src="@drawable/ic_add_white"
            app:backgroundTint="?accent"
            app:tint="@color/white" />

    </FrameLayout>

</FrameLayout>